--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
+            app:title="Media Safe"
             />
 
     </com.google.android.material.appbar.AppBarLayout>
@@ -27,10 +28,10 @@
         android:id="@+id/main_RecyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:layout_below="@id/toolbar"
 
         android:orientation="vertical"
-        android:visibility="gone"
         />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
