--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,11 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
+            app:menu="@menu/menu_main"
+            app:theme="@style/defaultToolbarTheme"
             app:title="Media Safe"
+            android:background="@color/main_navy"
+            app:titleTextColor="@color/white"
             />
 
     </com.google.android.material.appbar.AppBarLayout>
