Give functionality to FAB in AlbumActivity. Migrate getImageCount to FileUtils. Add AppTheme to other activities.

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -6,7 +6,8 @@
         android:id="@+id/action_new_album"
         android:title="New Album"
         android:icon="@drawable/add_white"
-        app:showAsAction="always" />
+        app:showAsAction="always"
+        />
 
     <item
         android:id="@+id/action_settings"
