--- a/app/src/main/res/layout/activity_album.xml
+++ b/app/src/main/res/layout/activity_album.xml
@@ -21,6 +21,9 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             app:title="Media Safe"
+            app:theme="@style/defaultToolbarTheme"
+            android:background="@color/main_navy"
+            app:titleTextColor="@color/white"
             />
 
     </com.google.android.material.appbar.AppBarLayout>
