Add overlay for grid items on longclick to indicate photo is selected for an operations.

--- a/app/src/main/res/layout/grid_item_layout.xml
+++ b/app/src/main/res/layout/grid_item_layout.xml
@@ -17,4 +17,12 @@
         android:adjustViewBounds="true"
         android:background="@color/light_gray"/>
 
+    <View
+        android:id="@+id/overlay"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#80000000"
+        android:visibility="gone"
+    />
+
 </androidx.cardview.widget.CardView>
