--- a/app/src/main/res/layout/item_album.xml
+++ b/app/src/main/res/layout/item_album.xml
@@ -23,16 +23,20 @@
 
     <TextView
         android:id="@+id/album_name"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textSize="18sp"
+        android:textSize="21sp"
         android:textColor="@android:color/black"
-        android:padding="4sp"
+        android:padding="4dp"
         tools:text="Album Name"
 
         app:layout_constraintStart_toEndOf="@id/album_thumbnail"
+        app:layout_constraintEnd_toStartOf="@id/photo_count"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
+
+        android:ellipsize="end"
+        android:maxLines="1"
         />
 
     <TextView
@@ -45,7 +49,7 @@
 
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@id/album_name"
+        app:layout_constraintEnd_toStartOf="@id/album_options_button"
         />
 
     <ImageButton
@@ -56,6 +60,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginEnd="8dp"
+        android:padding="8dp"
 
         android:background="?android:attr/selectableItemBackgroundBorderless"
         android:src="@drawable/menu"
