--- a/app/src/main/res/layout/activity_media_view.xml
+++ b/app/src/main/res/layout/activity_media_view.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/black">
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewPager"
@@ -28,10 +29,10 @@
             android:text="Delete" />
 
         <Button
-            android:id="@+id/btnShare"
+            android:id="@+id/btnRestore"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Share" />
+            android:text="Restore" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
