Improve Button style and layout

--- a/app/src/main/res/layout/calculator_layout.xml
+++ b/app/src/main/res/layout/calculator_layout.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:background="@color/darker_gray">
 
     <!-- Horizontal Guidelines -->
     <androidx.constraintlayout.widget.Guideline
@@ -81,13 +82,16 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/guide_row1"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+
+        android:textColor="@color/white"/>
 
     <!-- Buttons -->
     <Button
         android:id="@+id/btnRoot"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        style="@style/CalculatorButtonStyle"
         android:text="X^"
         app:layout_constraintTop_toTopOf="@id/guide_row1"
         app:layout_constraintBottom_toTopOf="@id/guide_row2"
@@ -98,6 +102,7 @@
         android:id="@+id/btnPercent"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        style="@style/CalculatorButtonStyle"
         android:text="%"
         app:layout_constraintTop_toTopOf="@id/guide_row1"
         app:layout_constraintBottom_toTopOf="@id/guide_row2"
@@ -108,6 +113,7 @@
         android:id="@+id/btnDiv"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        style="@style/CalculatorButtonStyle"
         android:text="/"
         app:layout_constraintTop_toTopOf="@id/guide_row1"
         app:layout_constraintBottom_toTopOf="@id/guide_row2"
@@ -118,6 +124,7 @@
         android:id="@+id/btn7"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        style="@style/CalculatorButtonStyle"
         android:text="7"
         app:layout_constraintTop_toTopOf="@id/guide_row2"
         app:layout_constraintBottom_toTopOf="@id/guide_row3"
@@ -128,6 +135,7 @@
         android:id="@+id/btn8"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        style="@style/CalculatorButtonStyle"
         android:text="8"
         app:layout_constraintTop_toTopOf="@id/guide_row2"
         app:layout_constraintBottom_toTopOf="@id/guide_row3"
@@ -138,6 +146,7 @@
         android:id="@+id/btn9"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        style="@style/CalculatorButtonStyle"
         android:text="9"
         app:layout_constraintTop_toTopOf="@id/guide_row2"
         app:layout_constraintBottom_toTopOf="@id/guide_row3"
@@ -148,6 +157,7 @@
         android:id="@+id/btnTimes"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        style="@style/CalculatorButtonStyle"
         android:text="X"
         app:layout_constraintTop_toTopOf="@id/guide_row1"
         app:layout_constraintBottom_toTopOf="@id/guide_row2"
@@ -158,6 +168,7 @@
         android:id="@+id/btnMinus"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        style="@style/CalculatorButtonStyle"
         android:text="-"
         app:layout_constraintTop_toTopOf="@id/guide_row2"
         app:layout_constraintBottom_toTopOf="@id/guide_row3"
@@ -168,6 +179,7 @@
         android:id="@+id/btnPlus"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        style="@style/CalculatorButtonStyle"
         android:text="+"
         app:layout_constraintTop_toTopOf="@id/guide_row3"
         app:layout_constraintBottom_toTopOf="@id/guide_row4"
@@ -178,6 +190,7 @@
         android:id="@+id/btn4"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        style="@style/CalculatorButtonStyle"
         android:text="4"
         app:layout_constraintTop_toTopOf="@id/guide_row3"
         app:layout_constraintBottom_toTopOf="@id/guide_row4"
@@ -188,6 +201,7 @@
         android:id="@+id/btn5"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        style="@style/CalculatorButtonStyle"
         android:text="5"
         app:layout_constraintTop_toTopOf="@id/guide_row3"
         app:layout_constraintBottom_toTopOf="@id/guide_row4"
@@ -198,6 +212,7 @@
         android:id="@+id/btn6"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        style="@style/CalculatorButtonStyle"
         android:text="6"
         app:layout_constraintTop_toTopOf="@id/guide_row3"
         app:layout_constraintBottom_toTopOf="@id/guide_row4"
@@ -208,6 +223,7 @@
         android:id="@+id/btn3"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        style="@style/CalculatorButtonStyle"
         android:text="3"
         app:layout_constraintTop_toTopOf="@id/guide_row4"
         app:layout_constraintBottom_toTopOf="@id/guide_row5"
@@ -218,6 +234,7 @@
         android:id="@+id/btnClear"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        style="@style/CalculatorButtonStyle"
         android:text="CLR"
         app:layout_constraintTop_toTopOf="@id/guide_row5"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -228,6 +245,7 @@
         android:id="@+id/btn1"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        style="@style/CalculatorButtonStyle"
         android:text="1"
         app:layout_constraintTop_toTopOf="@id/guide_row4"
         app:layout_constraintBottom_toTopOf="@id/guide_row5"
@@ -238,6 +256,7 @@
         android:id="@+id/btn2"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        style="@style/CalculatorButtonStyle"
         android:text="2"
         app:layout_constraintTop_toTopOf="@id/guide_row4"
         app:layout_constraintBottom_toTopOf="@id/guide_row5"
@@ -248,6 +267,7 @@
         android:id="@+id/btnPoint"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        style="@style/CalculatorButtonStyle"
         android:text="."
         app:layout_constraintTop_toTopOf="@id/guide_row5"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -258,6 +278,7 @@
         android:id="@+id/btn0"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        style="@style/CalculatorButtonStyle"
         android:text="0"
         app:layout_constraintTop_toTopOf="@id/guide_row5"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -270,6 +291,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:text="="
+        style="@style/CalculatorButtonStyle"
         app:layout_constraintTop_toTopOf="@id/guide_row4"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@id/guide_col3"
