--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="blue_click">#1A33B6</color>
     <color name="main_navy">#000080</color>
     <color name="darker_navy">#020265</color>
+    <color name="calc_button_blue">#17588C</color>
 </resources>
