--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,4 +22,13 @@
         <!-- Customize other dialog properties like background or button styles if needed -->
     </style>
 
+    <style name="CalculatorButtonStyle">
+        <item name="android:textSize">25sp</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">0dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:background">@drawable/calculator_button_background</item>
+        <item name="android:layout_margin">4dp</item>
+    </style>
+
 </resources>
