--- a/app/src/main/res/drawable/calculator_equals_button_background.xml
+++ b/app/src/main/res/drawable/calculator_equals_button_background.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@color/calc_button_click">
+    android:color="@color/calc_button_blue">
     <item>
         <shape android:shape="rectangle">
             <corners android:radius="8dp" /> <!-- Adjust the radius as needed -->
-            <solid android:color="@color/calc_button_blue" />
+            <solid android:color="@color/calc_button_click" />
         </shape>
     </item>
 </ripple>
