--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="blue_click">#1A33B6</color>
     <color name="main_navy">#000080</color>
     <color name="darker_navy">#020265</color>
-    <color name="calc_button_blue">#17588C</color>
+    <color name="calc_button_blue">#1b3745</color>
+    <color name="calc_button_click">#03b1b0</color>
 </resources>
