--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,7 @@
     <color name="darker_navy">#020265</color>
     <color name="calc_button_blue">#1b3745</color>
     <color name="calc_button_click">#03b1b0</color>
+    <color name="calc_buttons_background_gray">#212123</color>
+    <color name="calc_display_background_gray">#2b292a</color>
+    <color name="calc_number_buttons_gray">#343434</color>
 </resources>
