--- a/app/src/main/res/layout/activity_album.xml
+++ b/app/src/main/res/layout/activity_album.xml
@@ -22,7 +22,7 @@
             android:layout_height="?attr/actionBarSize"
             app:title="Media Safe"
             app:theme="@style/defaultToolbarTheme"
-            android:background="@color/main_navy"
+            android:background="@color/calc_button_blue"
             app:titleTextColor="@color/white"
             />
 
@@ -49,7 +49,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
 
-        app:backgroundTint="@color/main_navy"
+        app:backgroundTint="@color/calc_button_blue"
         app:srcCompat="@android:drawable/ic_input_add"
         />
 
