--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
             app:menu="@menu/menu_main"
             app:theme="@style/defaultToolbarTheme"
             app:title="Media Safe"
-            android:background="@color/main_navy"
+            android:background="@color/calc_button_blue"
             app:titleTextColor="@color/white"
             />
 
@@ -47,7 +47,7 @@
         android:layout_marginBottom="16dp"
 
         app:srcCompat="@android:drawable/ic_input_add"
-        app:backgroundTint="@color/main_navy"
+        app:backgroundTint="@color/calc_button_blue"
         />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
