--- a/app/src/main/res/menu/menu_album.xml
+++ b/app/src/main/res/menu/menu_album.xml
@@ -8,6 +8,12 @@
         app:showAsAction="always" />
 
     <item
+        android:id="@+id/action_move"
+        android:title="Move"
+        android:icon="@drawable/move"
+        app:showAsAction="always" />
+
+    <item
         android:id="@+id/action_restore"
         android:title="Restore"
         android:icon="@drawable/restore"
