--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,7 +1,128 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true">
+
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        android:fitsSystemWindows="true">
+
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/settings_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            app:theme="@style/defaultToolbarTheme"
+            app:title="Settings"
+            android:background="@color/calc_button_blue"
+            app:titleTextColor="@color/white"/>
+
+    </com.google.android.material.appbar.AppBarLayout>
+
+    <!-- Title or Header -->
+    <TextView
+        android:id="@+id/settings_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Media Safe Calculator"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:textColor="@color/black"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@id/appBar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <!-- First Setting Option (Example: Toggle) -->
+    <TextView
+        android:id="@+id/setting_option_1_label"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Delete Original Files After Transfer"
+        android:textSize="16sp"
+        android:textColor="@color/black"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/setting_option_1_toggle"
+        app:layout_constraintBottom_toBottomOf="@id/setting_option_1_toggle"
+        android:layout_margin="16dp"
+        android:visibility="visible" />
+
+    <androidx.appcompat.widget.SwitchCompat
+        android:id="@+id/setting_option_1_toggle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:checked="false"
+        app:layout_constraintTop_toBottomOf="@id/settings_title"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_margin="16dp"
+        android:visibility="visible"
+        />
+
+    <!-- Second Setting Option (Example: Button) -->
+    <TextView
+        android:id="@+id/setting_option_2_label"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Option 2"
+        android:textSize="16sp"
+        app:layout_constraintTop_toBottomOf="@id/setting_option_1_label"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_margin="16dp"
+        android:visibility="invisible"
+        />
+
+    <Button
+        android:id="@+id/setting_option_2_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Change"
+        app:layout_constraintTop_toTopOf="@id/setting_option_2_label"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_margin="16dp"
+        android:visibility="invisible"
+        />
+
+    <!-- Third Setting Option (Example: Spinner) -->
+    <TextView
+        android:id="@+id/setting_option_3_label"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Option 3"
+        android:textSize="16sp"
+        app:layout_constraintTop_toBottomOf="@id/setting_option_2_label"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_margin="16dp"
+        android:visibility="invisible"
+        />
+
+    <Spinner
+        android:id="@+id/setting_option_3_spinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@id/setting_option_3_label"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_margin="16dp"
+        android:visibility="invisible"
+        />
+
+    <TextView
+        android:id="@+id/app_version_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_margin="8dp"
+
+        android:textSize="20sp"
+        android:text="0.1"
+        android:textColor="@color/light_gray"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
