--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,6 +22,23 @@
         <!-- Customize other dialog properties like background or button styles if needed -->
     </style>
 
+    <style name="CustomDialogTheme" parent="Theme.AppCompat.Light.Dialog.Alert">
+
+        <item name="android:background">@drawable/dialog_background</item>
+
+        <item name="android:textColorPrimary">@color/black</item>
+
+        <item name="android:windowMinWidthMajor">80%</item>
+        <item name="android:windowMinWidthMinor">80%</item>
+        <!-- Button styles -->
+        <item name="buttonBarNegativeButtonStyle">@style/CustomDialogButton</item>
+        <item name="buttonBarPositiveButtonStyle">@style/CustomDialogButton</item>
+    </style>
+
+    <style name="CustomDialogButton" parent="Widget.AppCompat.Button.ButtonBar.AlertDialog">
+        <item name="android:textColor">@color/blue_click</item>
+    </style>
+
     <style name="CalculatorButtonStyle">
         <item name="android:textSize">25sp</item>
         <item name="android:layout_width">0dp</item>
